<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView_widget_title"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:paddingTop="8dp"
        android:textAlignment="center"
        android:background="@color/design_default_color_primary"
        android:textColor="@color/white"
        android:typeface="sans"
        tools:text="Practice Test" />

    <TextView
        android:id="@+id/textView_widget_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        android:typeface="sans"
        tools:text="98%"
        tools:textColor="@color/colorPrimary" />
</LinearLayout>