...
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_udacity" />

            <Button
                android:id="@+id/buttonPractice"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@android:color/white"
                android:fontFamily="@font/roboto"
                android:text="@string/topic_practice"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/buttonResults"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@android:color/white"
                android:elevation="0dp"
...
